--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -7,28 +7,20 @@ on:
   issues:
     types: [opened]
 
-permissions:
-  issues: write
-
 jobs:
   label:
     runs-on: ubuntu-latest
     steps:
       - name: Add labels
-        uses: actions/github-script@v7
+        uses: actions/github-script@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             // Add or tweak your labels here
             const labels = ["triage", "copilot"]; // <-- TUNE ME!
-            try {
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                labels
-              });
-              console.log(`✅ Added labels: ${labels.join(", ")} to issue #${context.issue.number}`);
-            } catch (error) {
-              console.log(`⚠️ Failed to add labels: ${error.message}`);
-            }
+            await github.rest.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              labels
+            });
