--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -7,16 +7,12 @@ on:
   pull_request:
     types: [opened]
 
-permissions:
-  issues: write
-  pull-requests: write
-
 jobs:
   auto-assign:
     runs-on: ubuntu-latest
     steps:
       - name: Assign Copilot (or others) to new PRs
-        uses: actions/github-script@v7
+        uses: actions/github-script@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -25,18 +21,13 @@ jobs:
             const assignees = [copilotUsername]; // Or: ["copilot","anotheruser"]
             const currentAssignees = context.payload.pull_request.assignees.map(u => u.login);
             if (!assignees.every(a => currentAssignees.includes(a))) {
-              try {
-                await github.rest.issues.addAssignees({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: context.payload.pull_request.number,
-                  assignees
-                });
-                console.log(`✅ Assigned ${assignees.join(", ")} to PR #${context.payload.pull_request.number}`);
-              } catch (error) {
-                console.log(`⚠️ Failed to assign ${assignees.join(", ")}: ${error.message}`);
-                console.log("Note: You must have a Copilot seat assigned to your account/org for this to work.");
-              }
+              await github.rest.issues.addAssignees({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.pull_request.number,
+                assignees
+              });
+              console.log(`Assigned ${assignees.join(", ")} to PR #${context.payload.pull_request.number}`);
             } else {
-              console.log(`ℹ️ Already assigned: ${assignees.join(", ")} on PR #${context.payload.pull_request.number}`);
+              console.log(`Already assigned: ${assignees.join(", ")} on PR #${context.payload.pull_request.number}`);
             }
